--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,17 +5,30 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build",
-        "zeroConfig": true
+        "distDir": "build"
       }
     }
   ],
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": "build",
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "src": "^/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "^/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "^/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "^/logo(.*)\\.png",
+      "dest": "/logo$1.png"
+    },
+    {
+      "src": "^/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
