--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,6 +9,39 @@
       }
     }
   ],
+  "headers": [
+    {
+      "source": "/static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/manifest.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/manifest+json; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ],
   "routes": [
     {
       "src": "^/static/(.*)",
@@ -23,8 +56,8 @@
       "dest": "/manifest.json"
     },
     {
-      "src": "^/logo(.*)\\.png",
-      "dest": "/logo$1.png"
+      "src": "^/logo(.*)\\.(png|svg|jpg|jpeg|gif|ico)",
+      "dest": "/logo$1.$2"
     },
     {
       "src": "^/(.*)",
