frontend deployment fix

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -48,7 +48,7 @@
       "destination": "https://quantify-assignment.onrender.com/api/$1"
     },
     {
-      "source": "/((?!api/|static/|favicon.ico|manifest.json|logo.*\\.(png|svg|jpg|jpeg|gif|ico)).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
